hphp/test/slow/ext_intervaltimer/catching.php.expectf
Fatal error: Uncaught exception escaping IntervalTimer: exception 'Exception' with message 'buffalo' in %s/catching.php:6
Stack trace:
#0 %s/catching.php(11): Closure$()
#1 {main} in %s/catching.php on line 11
